sort.basic.lessons.sort.basic.bubble.AlgBubbleSort3.scala.error
AlgBubbleSort3:7: error: type mismatch;
 found   : Unit
 required: Boolean
			if(hasSwap=true)
                                  ^